test/integration/semantic/operations6.pal
{14, 15,16,17}
{
    Test that operations work
}
program test(input, output);
var
	i : integer;
	b : Boolean;
	r : real;
begin
	
	// /

	i := i / i;	// error, integer division can only happen via div function
	i := r / i;	// error
	i := i / r;	// error
	i := r / r;	// error
	
	r := i / i;
	r := r / i;
	r := i / r;
	r := r / r;
	
end.
